# trext-rs

./: .gitignore  Cargo.toml  README.md
libs/common/: Cargo.toml  README.md
libs/common/src/: lib.rs  piecetable.rs  piecetree.rs  tui.rs
libs/common/src/buffers/: mod.rs
libs/common/src/gui/: app.rs  events.rs  mod.rs  program.rs  tui.rs
libs/common/src/tests/: mod.rs  piecetable.rs
trex-rs/: Cargo.toml  LICENSE-MIT  README.md
trext-rs/: CONTRIBUTING.md  Cargo.toml  README.md
trext-rs/src/: app.rs  main.rs
