[package]
name = "trext-rs"
version = "0.1.0"
edition = "2021"
description = "Text editor exploration in Rust."
repository = "https://github.com/Spyder337/trex-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive", "cargo"] }
common = { version = "0.1.0", path = "../libs/common" }
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
