[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
futures = "0.3.30"
ratatui = { version = "0.26.1", features = ["serde", "all-widgets"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-futures = "0.0.0"
